; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_domainset.c_vm_domainset_iter_page_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_domainset.c_vm_domainset_iter_page_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_domainset_iter = type { i32 }
%struct.vm_object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_domainset_iter_page_init(%struct.vm_domainset_iter* %0, %struct.vm_object* %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.vm_domainset_iter*, align 8
  %7 = alloca %struct.vm_object*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.vm_domainset_iter* %0, %struct.vm_domainset_iter** %6, align 8
  store %struct.vm_object* %1, %struct.vm_object** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32*, i32** %9, align 8
  store i32 0, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
